# dreamer

./: .aider.chat.history.md  CHANGELOG.rst  README.rst  pyproject.toml  python
.github/workflows/: action.yml
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
src/harmonic_resonance/dreamer/: __init__.py  app.py  audio_processor.py  dreamer.py  utils.py  video_generator.py
