[project]
name = "harmonic-resonance-dreamer"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "turn music into visuals"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
dreamer = "harmonic_resonance.dreamer.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harmonic_resonance"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "harmonic_resonance.dreamer.__version__"}

[project.urls]
"Website" = "https://harmonic-resonance.github.io/dreamer"
"Repository" = "https://github.com/harmonic-resonance/dreamer"
"Issues" = "https://github.com/harmonic-resonance/dreamer/issues"